Add ability to report junit test results

--- a/src/main/resources/com/jenkins/plugins/sparknotify/Messages.properties
+++ b/src/main/resources/com/jenkins/plugins/sparknotify/Messages.properties
@@ -1,1 +1,23 @@
-DisplayName =  Post Spark Notifications
+DisplayName =  Notify Webex Teams
+StepName = sparkSend
+
+# general
+SendingMessage = Sending teams message to space {0}
+MessageSent = Teams message sent
+InvalidMessage = Invalid message; click help button
+InvalidSpaceId = Invalid space ID; click help panel
+MessageNotNull = Teams message cannot be null
+SpacesNotEmpty = Teams space list cannot be empty
+ErrorHttpResponse = Teams notification failed. HTTP response: {0} {1}
+ErrorException = Teams notification failed with exception: {0}
+Disabled = Teams Notify Plugin Disabled!
+SkipNoMessage = Skipping teams notifications because no message was defined
+SkipNoSpaces = Skipping teams notifications because no spaces were defined
+
+# post-build
+SkipSuccess = Skipping teams notifications because job was successful
+SkipFailed = Skipping teams notifications because job failed
+SkipAborted = Skipping teams notifications because job was aborted
+SkipUnstable = Skipping teams notifications because job was unstable
+SkipNoTestResults = Skipping teams notifications because no test results found
+NoBuildResult = Could not get build result
